--- a/style2.css
+++ b/style2.css
@@ -27,7 +27,7 @@
   visibility: hidden;
 }
 body {
-	background: url('assets/img/balloons2.JPG');
+	background: url('assets/img/balloons.jpg');
 	background-size: cover;
 	/*opacity: 0.5;*/
 }
