--- a/style2.css
+++ b/style2.css
@@ -27,10 +27,9 @@
   visibility: hidden;
 }
 body {
-	/*background: url('assets/img/balloons.jpg');*/
-	/*background-size: cover;*/
-	/*opacity: 0.5;*/
-	background-color: #B4A6D7;
+	background: url('assets/img/balloons6.jpg');
+	background-size: cover;
+	/*background-color: #B4A6D7;*/
 }
 #homeButton {
   width: 200px;
@@ -84,3 +83,25 @@ p {
 	padding: 10px;
 	text-align: center;
 }
+#carousel-controls {
+    /* vertically center */				
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+
+    /* spacing between the two buttons */
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    
+    /* appear in front of images */
+    z-index: 1;
+}
+
+#button-next,
+#button-previous {
+    background: none;
+    border: none;
+    cursor: pointer;
+    outline: none;
+}		
