--- a/style2.css
+++ b/style2.css
@@ -27,7 +27,7 @@
   visibility: hidden;
 }
 body {
-	background: url('assets/img/balloons6.jpg');
+	background: url('assets/img/balloons2.JPG');
 	background-size: cover;
 	/*background-color: #B4A6D7;*/
 }
