--- a/style2.css
+++ b/style2.css
@@ -27,9 +27,9 @@
   visibility: hidden;
 }
 body {
-	background: url('assets/img/balloons.jpg');
-	background-size: cover;
-	/*background-color: #B4A6D7;*/
+	/*background: url('assets/img/balloons.jpg');
+	background-size: cover;*/
+	background-color: #B4A6D7;
 }
 #homeButton {
   width: 200px;
